--- a/scss/blocks/_cta.scss
+++ b/scss/blocks/_cta.scss
@@ -3,7 +3,7 @@
     background:
         linear-gradient(180deg, $dark 10.42%, rgba(36, 43, 51, 0) 50.52%, $dark 90.1%),
         linear-gradient(0deg, rgba(36, 43, 51, 0.9) 0%, rgba(36, 43, 51, 0.9) 100%),
-        url('/img/cta/cta-bg.jpg'),
+        url('./../img/cta/cta-bg.jpg'),
         #c4c4c4;
 
     @include mediaTablet {
