--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -8,7 +8,7 @@
 
     min-height: 840px;
     background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%),
-        url(/img/header/header-bg.jpg);
+        url(./../img/header/header-bg.jpg);
     
     @include mediaTablet {
         min-height: unset;
